tests/invalid_nodepend/type_lhs_var.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module type_lhs_var.
:- interface.

:- type foo == int.

:- type A == int.

:- type B
    --->    foo
    ;       bar.
