tests/invalid_nodepend/type_lhs_var.err_exp
type_lhs_var.m:010: On the left hand side of type definition: error: expected a
type_lhs_var.m:010:   [38;5;40mtype constructor and zero or more type variables as[39;49m
type_lhs_var.m:010:   [38;5;40marguments,[39;49m got [38;5;203m`A'.[39;49m
type_lhs_var.m:012: On the left hand side of type definition: error: expected a
type_lhs_var.m:012:   [38;5;40mtype constructor and zero or more type variables as[39;49m
type_lhs_var.m:012:   [38;5;40marguments,[39;49m got [38;5;203m`B'.[39;49m
